...
                    android:layout_height="36dp"
                    android:layout_toRightOf="@+id/src_location_search_text"
                    android:background="#EDEDED"
                    android:drawableBottom="@android:drawable/ic_menu_search" />

                <ImageButton
                    android:id="@+id/srcBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
...
                    android:layout_toRightOf="@+id/dest_location_search_text"
                    android:background="#EDEDED"
                    android:drawableBottom="@android:drawable/ic_menu_search" />


                <ImageButton
                    android:id="@+id/destBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
...
