<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    tools:context=".MapActivity">
    <!--    <ImageView-->
    <!--        android:id="@+id/imageView3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:srcCompat="@drawable/map_example"-->
    <!--        tools:layout_editor_absoluteX="0dp"-->
    <!--        tools:layout_editor_absoluteY="0dp"-->
    <!--        android:scaleType="fitXY"/>-->

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        mapbox:mapbox_cameraTargetLat="38.9098"
        mapbox:mapbox_cameraTargetLng="-77.0295"
        mapbox:mapbox_cameraZoom="12">

        <Button
            android:id="@+id/confirmSrcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="30dp"
            android:text="@string/confirm" />

        <TextView
            android:id="@+id/selectedLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="#9C9A9A"
            android:text="" />

    </com.mapbox.mapboxsdk.maps.MapView>



</FrameLayout>