<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:title="MY ACCOUNT" />
        <item
            android:id="@+id/homeFragment"
            android:title="HOME" />
        <item
            android:id="@+id/chatFragment"
            android:title="CHAT" />
        <item
            android:id="@+id/settingFragment"
            android:title="SETTING" />

    </group>
</menu>