<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor"
    tools:context="SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="128dp" />
        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="128dp" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_rating"/>

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="3" />


    </LinearLayout>
</ScrollView>