<resources>
    <string name="app_name">TravelTogether</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="access_token">pk.eyJ1IjoibWlrZWxkb3R4IiwiYSI6ImNrbHp6NjllZTFpeG0yd282M3dzN2xuNTcifQ.6CCW8LTTyUZsSHAE8NPR0A</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="pick_time">Pick a Time</string>
    <string name="menu_chat">chat</string>
    <string name="wifi_on">ON</string>
    <string name="discover">Discover</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="connection_status">Connection Status</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--Strings used for notifications-->
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="search_a_location">Search a location</string>
    <string name="create_daily_commute">Create Daily Commute</string>
    <string name="my_journeys">My journeys</string>
    <string name="p2p_chat">Peer To Peer Chat</string>
    <string name="start_navigation">Start navigation</string>
    <string name="create_journey">Create Journey</string>
    <string name="chat">Chat</string>
    <string name="journeys">Journeys</string>
    <string name="src">Src</string>
    <string name="dest">Dest</string>
    <string name="src_location">src location</string>
    <string name="dest_location">dest location</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="route">Route</string>
    <string name="start_journey">Start Journey</string>
    <string name="start_time">Start time</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="travel_together">Travel Together</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="type_a_message">Type a message...</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="minimum_rating">Minimum Rating</string>
    <string name="password">Password</string>
    <string name="permanent_residence">Permanent residence</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="_createNewJourney">Create New Journey</string>
    <string name="hello">hello</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name</string>
    <string name="developer">developer</string>
    <string name="mobile">Mobile</string>
    <string name="_353_9999999999">+353-9999999999</string>
    <string name="email_address">email address</string>
    <string name="address">Address</string>
    <string name="xxxxxxxxxxxxxxxxxx">xxxxxxxxxxxxxxxxxx</string>
    <string name="create_a_journey">Create a journey</string>
    <string name="discover_journeys">Discover journeys</string>
    <string name="p2p">P2P</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="_20">20</string>
    <string name="years_old">years old</string>
    <string name="settings">Settings</string>
    <string name="patrick_star">Patrick Star</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="journey_preferences">Journey Preferences</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="app_ver_0_0_1">App ver 0.0.1</string>
    <string name="username">username</string>
    <string name="join">JOIN</string>
    <string name="submitRating">Submit Rating</string>
    <string name="navigation_header">Navigation header</string>
    <string name="discoveryStarted">Discovery started ...</string>
    <string name="discoveryNotStarted">can\'t start discovery services !</string>
    <string name="noDeviceFound">No device found</string>
    <string name="remember_your_device_name_is_how_other_users_see_you">Remember, your device name is how other users see you !</string>
    <string name="connected">\"You are now in connection with \"</string>
    <string name="errorInConnectionP2P">Error encountered while establishing a connection with</string>
    <string name="years_old_prefix">\" years old\"</string>
    <string name="client">Client</string>
    <string name="host">Host</string>
</resources>